--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
 streamlit==1.34.0
-scikit-learn==1.2.2
-pandas
-numpy
-seaborn
-matplotlib
-joblib
-streamlit-autorefresh
+scikit-learn==1.3.2
+pandas==2.1.4
+numpy==1.26.4
+seaborn==0.13.2
+matplotlib==3.8.4
+joblib==1.3.2
+streamlit-autorefresh==1.0.1
+xgboost==2.0.3
+plotly==5.21.0
+
